tests/deriving/should_fail/deriving-via-fail2.hs
{-# LANGUAGE DerivingVia #-}
{-# LANGUAGE StandaloneDeriving #-}
module DerivingViaFail2 where

class C a
data A = A
deriving via Maybe instance C A
